# IsoLite

./: CMakeLists.txt  README.md
include/: observer.h
include/isolite/: CMakeLists.txt  observer.h  subject.h
include/isolite/utils/: events.h
lib/doctest/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_isolite.cpp
